1.3.0 update